fix(ui): improve fonts and text readability

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,20 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700,700i|Montserrat:900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&family=Poppins:ital,wght@0,400;0,700;1,400&display=swap');
 
 $tabSize: 4;
 $hyphens: none;
 
 @mixin bodyFont() {
-    font-family: 'Merriweather Sans','Georgia',serif;
+    font-family: 'Poppins','Georgia',serif;
     font-weight: 400;
 }
 
 @mixin headingFont() {
-    font-family: 'Montserrat','Georgia',serif;
-    font-weight: 900;
+    font-family: 'Nunito Sans','Georgia',serif;
+    font-weight: 700;
 }
 
 @mixin codeFont() {
     font-family: monospace, serif;
+    font-size: 0.85em;
     text-align: left;
     white-space: pre;
     word-spacing: normal;
